Correcoes de CSS e inclusao de DataTable

--- a/application/views/scripts/pescador/index.phtml
+++ b/application/views/scripts/pescador/index.phtml
@@ -1,4 +1,4 @@
-<fieldset id="Social"></fieldset>
+ <fieldset id="Social"></fieldset>
     <form name="indexPescador" method="post">
 
         <h2>Perfil Social->Pescador (lista limitada em 20)</h2>
@@ -47,7 +47,7 @@
             </div>    
             
         <br/>
-        <table>
+        <table id="tablePescadores" class="display">
             <tr>
                 <th>ID</th>
                 <th>Nome</th>
