--- a/public/css/estilo-admin.css
+++ b/public/css/estilo-admin.css
@@ -361,7 +361,7 @@ tbody tr:nth-child(odd) {
 
 
 select{
-    width: 245px;
+    width: 55%;
     height: 25px;
     background: white;
     float: right;
@@ -385,16 +385,19 @@ select.embarcacoes{
 }
 input {
     float: right;
-    width: 240px;
+    width: 55%;
     height: 22px;
     border-radius: 3px;
     border-color:#8b8386;
+}
+.busca{
+    width: 180px;
 }
 .forDate{
     float: right;
 }
 .forDate input{
-    width: 60px;
+    width: 55%;
 }
 .data{
     float: none;
