--- a/application/views/scripts/pescador/novo.phtml
+++ b/application/views/scripts/pescador/novo.phtml
@@ -197,7 +197,7 @@ $this->headScript()->appendFile('/js/mascaras.js');
                 <table id="tabelaSemEstilo">
                     <td><a href="<?= $this->url(array("controller" => "pescador", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a></td>
                     
-                    <td><input type="button" size="50" value="Salvar e Continuar" class="button-confirmText" onclick="jsInsertPescadorEndereco(this.form, '<?= $this->url(array("controller" => "pescador", "action" => "insertpescadorendereco"), null, true) ?>')"></td>
+                    <td><input class="busca" type="button" size="50" value="Salvar e Continuar" class="button-confirmText" onclick="jsInsertPescadorEndereco(this.form, '<?= $this->url(array("controller" => "pescador", "action" => "insertpescadorendereco"), null, true) ?>')"></td>
                 </table>
             </div>
         </fieldset>
