--- a/application/views/scripts/pescador/editar.phtml
+++ b/application/views/scripts/pescador/editar.phtml
@@ -227,7 +227,7 @@ $(function() {
                 <div class="Submit">
                     
                         <a href="<?= $this->url(array("controller" => "pescador", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a>
-                        <input type="submit" value="Atualizar" />
+                        <input class="busca" type="submit" value="Atualizar" />
                         <input type="hidden" size="50" value="Salvar e Continuar" class="button-confirmText" onclick="jsAtualizarPescadorEndereco(this.form, '<?= $this->url(array("controller" => "pescador", "action" => "atualizarpescadorendereco"), null, true) ?>')">
                     
                 </div>
