--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -110,6 +110,6 @@ $this->headScript()->appendFile('/js/mascaras.js');
     </fieldset>
     <div class="Submit">
         <a href="<?= $this->url(array("controller" => "usuarios", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a>
-        <input type="submit" value="Cadastrar" />
+        <input class="busca" type="submit" value="Cadastrar" />
     </div>
 </form>
