--- a/application/views/scripts/index-admin/index.phtml
+++ b/application/views/scripts/index-admin/index.phtml
@@ -1,28 +1,29 @@
+<h3>Relatórios</h3>
+
 <div class="menu-relatorios">
-    <a href="#">
-        <img src="img/pescador-icon.jpg"/>
+    <a class="link-rel" href="#">
+        <img src="img/pescador-icon.jpg"/><br/>
         <span class="legenda">Pescadores  </span>
     </a>
 </div>
 
 <div class="menu-relatorios">
-    <a href="#">
-        <img src="img/peixe-icon.jpg"/>
+    <a class="link-rel" href="#">
+        <img src="img/peixe-icon.jpg"/> <br/>
         <span class="legenda">Espécies</span>
     </a>
 </div>
 
 <div class="menu-relatorios">
-    <a href="#">
-        <img src="img/barco-icon.jpg"/>
+    <a class="link-rel" href="#">
+        <img src="img/barco-icon.jpg"/><br/>
         <span class="legenda">Embarcações</span>
     </a>
 </div>
 
 <div class="menu-relatorios">
-    <a href="#">
-        <img src="img/entrevista-icon.jpg"/>
+    <a class="link-rel" href="#">
+        <img src="img/entrevista-icon.jpg"/><br/>
         <span class="legenda">Entrevistas</span>
-
     </a>
 </div>
