--- a/public/css/estilo-admin.css
+++ b/public/css/estilo-admin.css
@@ -707,3 +707,31 @@ legend{
 .relatorio:hover{
     color: #5F302B;
 }
+
+.menu-relatorios{
+    width: 140px;
+    height: 145px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 25px;
+    border: 3px #90544D solid;
+    border-radius: 5px;
+}
+.menu-relatorios:hover{
+    border-color: #5F302B;
+    
+}
+
+.legenda{
+    margin-left: 20%;
+    color: #90544D;
+
+    
+}
+.link-rel{
+    text-decoration: none;
+}
+
+.link-rel:hover{
+    color: #5F302B;
+}
